<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dp_19">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/dp_10">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp_10">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_folder"
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10"
                android:src="@drawable/ic_folder" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_allow_4K"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_10"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/permission_not_again"
                android:textColor="@color/black_1d1c1c"
                android:textSize="@dimen/dp_11" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/select_permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_20"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/select_permission"
                android:textColor="@color/black_1d1c1c"
                android:textSize="@dimen/dp_11" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_permit_manually"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:fontFamily="@font/roboto_medium"
                android:foreground="@drawable/bg_animation_click"
                android:gravity="center"
                android:text="@string/permit_manually"
                android:textColor="@color/black_1d1c1c"
                android:textSize="@dimen/dp_13" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:fontFamily="@font/roboto_medium"
                android:foreground="@drawable/bg_animation_click"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/black_1d1c1c"
                android:textSize="@dimen/dp_13" />


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</LinearLayout>
