<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_30"
        android:background="@drawable/bg_ra8_gra"
        android:backgroundTint="@color/white"
        android:paddingBottom="@dimen/dp_10"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:paddingHorizontal="@dimen/dp_16"
            android:text="@string/grant_permission"
            android:textSize="@dimen/dp_18"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_content_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="top"
            android:lineHeight="@dimen/dp_24"
            android:paddingHorizontal="@dimen/dp_16"
            android:text="@string/reject_permission"
            android:textColor="@color/black_1d1c1c"
            android:textSize="@dimen/dp_16"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@id/tvHeader" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_please_turn_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="top"
            android:lineHeight="@dimen/dp_24"
            android:paddingHorizontal="@dimen/dp_16"
            android:text="@string/please_turn_on_setting"
            android:textColor="@color/black_1d1c1c"
            android:textSize="@dimen/dp_16"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@id/tv_content_rate"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/noti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:background="@drawable/bg_ra5"
            app:layout_constraintTop_toBottomOf="@id/tv_please_turn_on">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_margin="@dimen/dp_16"
                android:src="@drawable/logo_tiny"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:text="@string/app_name"
                android:textSize="@dimen/dp_16"
                android:textStyle="bold"

                app:layout_constraintBottom_toBottomOf="@id/logo"
                app:layout_constraintStart_toEndOf="@id/logo"
                app:layout_constraintTop_toTopOf="@id/logo" />

            <ImageView
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_stwich"
                app:layout_constraintBottom_toBottomOf="@id/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/logo" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/btn_warning_setting"
            style="@style/text_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/bg_ra8_gra"
            android:foreground="@drawable/bg_animation_click"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:paddingHorizontal="@dimen/dp_30"
            android:paddingVertical="@dimen/dp_14"
            android:text="@string/grant"
            android:textSize="@dimen/dp_18"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noti" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
