<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dp_19">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dp_10">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dp_10">
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_50"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:fontFamily="@font/roboto_medium"
                android:foreground="@drawable/bg_animation_click"
                android:gravity="center_vertical"
                android:text="@string/grant_permission"
                android:textColor="@color/black_1d1c1c"
                android:textSize="@dimen/dp_18"
                app:fontFamily="@font/roboto_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ivPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_6"
                android:fontFamily="@font/roboto_medium"
                android:foreground="@drawable/bg_animation_click"
                android:gravity="center_vertical"
                android:text="@string/please_grant"
                android:textColor="@color/black_1d1c1c"
                android:textSize="@dimen/dp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_permit_manually"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_20"
                android:fontFamily="@font/roboto_medium"
                android:paddingVertical="@dimen/dp_8"
                android:background="@drawable/bg_ra8_gra"
                android:foreground="@drawable/bg_animation_click"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="@dimen/dp_16"
                app:layout_constraintBottom_toBottomOf="@id/btn_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guide_50"
                app:layout_constraintTop_toTopOf="@id/btn_cancel" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginHorizontal="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_20"
                android:background="@drawable/bg_stroke_8"
                android:fontFamily="@font/roboto_medium"
                android:paddingVertical="@dimen/dp_8"
                android:foreground="@drawable/bg_animation_click"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/yellow_ea7103"
                android:textSize="@dimen/dp_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivPhone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guide_50"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
